fix: force dark mode to css

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -10,4 +10,10 @@
 :root {
   --ui-primary: #ff9900;
   /* --ui-bg: #0033a0; */
+  
 }
+
+.dark {
+  --ui-primary: #ff9900; 
+}
+
